Added start-up script

--- a/dumpbinGUI/dumpbinGUI.vcxproj
+++ b/dumpbinGUI/dumpbinGUI.vcxproj
@@ -81,6 +81,12 @@
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <Culture>0x0409</Culture>
     </ResourceCompile>
+    <PostBuildEvent />
+    <CustomBuildStep>
+      <Command>
+      </Command>
+    </CustomBuildStep>
+    <CustomBuildStep />
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -111,6 +117,12 @@
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <Culture>0x0409</Culture>
     </ResourceCompile>
+    <PostBuildEvent />
+    <CustomBuildStep>
+      <Command>
+      </Command>
+    </CustomBuildStep>
+    <CustomBuildStep />
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="About.cpp" />
@@ -142,6 +154,15 @@
     <Image Include="res\dumpbinGUI.ico" />
   </ItemGroup>
   <ItemGroup>
+    <CustomBuild Include="dumpbinGUI.bat">
+      <FileType>Document</FileType>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">xcopy "%(Fullpath)" "$(TargetDir)" /y /i /f</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Copying to target folder...</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(TargetDir)%(Filename)%(Extension);%(Outputs)</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">xcopy "%(Fullpath)" "$(TargetDir)" /y /i /f</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Copying to target folder...</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(TargetDir)%(Filename)%(Extension);%(Outputs)</Outputs>
+    </CustomBuild>
     <None Include="packages.config" />
     <None Include="res\ReadMe.htm" />
   </ItemGroup>
